@@ -1,3 +1,3 @@
-SUBDIRS = pixmaps script src man
+SUBDIRS = pixmaps script src man data
 
 EXTRA_DIST = LICENSE
